<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:paddingTop="8dp"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/login_logo"
        android:src="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login" />

    <com.dicoding.dicodingstory.ui.customview.AuthEditText
        android:id="@+id/et_email"
        style="@style/Widget.AppCompat.EditText.AuthEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:isEmail="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <com.dicoding.dicodingstory.ui.customview.AuthEditText
        android:id="@+id/et_password"
        style="@style/Widget.AppCompat.EditText.AuthEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:isPassword="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_login_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/don_t_have_account_yet" />

        <TextView
            android:id="@+id/tv_login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:alpha="0"
            android:text="@string/register_from_login"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>