<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_preview_cam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/et_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder"
        android:contentDescription="@string/preview_photo_result" />

    <EditText
        android:id="@+id/et_desc"
        style="@style/Widget.AppCompat.EditText.AuthEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_description"
        android:minLines="5"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:autofillHints="name" />

    <Button
        android:id="@+id/btn_camera_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_camera_x" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>