<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.dashboard.DetailStoryActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_story_detail"
        style="@style/Widget.MaterialComponents.ShapeableImageView.Story"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:alpha="0"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_posted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/posted_by"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_story_detail" />

    <TextView
        android:id="@+id/tv_user_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:textAppearance="@style/TextAppearance.AppCompat.UserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_posted_by" />

    <TextView
        android:id="@+id/tv_posted_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/posted_at"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name_detail" />

    <TextView
        android:id="@+id/tv_user_posted_at_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_posted_at" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/description"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_posted_at_detail" />

    <TextView
        android:id="@+id/tv_user_description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>