<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:paddingBottom="8dp"
    tools:context=".ui.dashboard.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/iv_btn_logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:alpha="0"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logout_button" />

        <ImageView
            android:id="@+id/iv_btn_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:alpha="1"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logout_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_stories"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_stories"
        app:layout_constraintEnd_toEndOf="@+id/rv_stories"
        android:contentDescription="@string/add_story" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_show_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_maps"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_story"
        app:layout_constraintEnd_toEndOf="@+id/rv_stories"
        android:contentDescription="@string/add_story" />

</androidx.constraintlayout.widget.ConstraintLayout>